# Fito_Prevision

./: .gitignore  BUILD_GUIDE.md  CLAUDE.md  CMakeLists.txt  NEXT_STEPS.md  README.md  VSCODE_BUILD_GUIDE.md  VSCODE_SETUP_STEP_BY_STEP.md  build.bat  comparison_table.md  migration_guide.md  opencv_calibration_analysis.md  qt5_ui_design.md  quick_build.bat  rebuild.bat  update_path.ps1
config/: ai_prevision_params.ini  line_params.ini  teed_settings.ini
src/: AIPrevisionWidget.cpp  AIPrevisionWidget.h  EdgeProcessingWidget.cpp  EdgeProcessingWidget.h  HalconVisionWidget.cpp  HalconVisionWidget.h  ImageProcessingPanel.cpp  ImageProcessingPanel.h  ImageViewer.cpp  ImageViewer.h  LineDetectionWidget.cpp  LineDetectionWidget.h  MainWindow.cpp  MainWindow.h  TEEDClient.cpp  TEEDClient.h  main.cpp
src/Vision/: Fnc_Vision_Pre.cpp  Fnc_Vision_Pre.h  Fnc_Vision_Pre_FITO.cpp  Fnc_Vision_Pre_FITO.h  Fnc_Vision_Pre_FITO_Standalone.cpp
ui/: AIPrevisionWidget.ui  CalibrationSettingsDialog.ui  CameraSettingsDialog.ui  EdgeProcessingWidget.ui  HalconVisionWidget.ui  LineDetectionWidget.ui  MainWindow.ui  README_UI.md
